--- a/sections/basic/index.html
+++ b/sections/basic/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Charlie's Basic JAMStack Website</title>
-</head>
-<body>
-  <main>
-    <h1>Hello from Charlie's Basic JAMStack Site!</h1>
-    <p>Code is what drives me insane and makes me sane at the same time!</p>
-  </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Charlie's Basic JAMStack Website</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <main>
+      <h1>Hello from Charlie's Basic JAMStack Site!</h1>
+      <p>Code is what drives me insane and makes me sane at the same time!</p>
+    </main>
+  </body>
 </html>
