feat(basic): add javascript

--- a/sections/basic/index.html
+++ b/sections/basic/index.html
@@ -11,6 +11,9 @@
     <main>
       <h1>Hello from Charlie's Basic JAMStack Site!</h1>
       <p>Code is what drives me insane and makes me sane at the same time!</p>
+      <h2>Most recently updated projects</h2>
+      <div id="content">Loading...</div>
     </main>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
